--- a/src/pages/UserHome.css
+++ b/src/pages/UserHome.css
@@ -6,8 +6,6 @@
 
 .home-header {
   margin-bottom: 1.5rem;
-  display: flex;
-  justify-content: center;
 }
 
 .user-greeting {
